--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fietspuzzeltocht</title>
     <script src="script.js" defer></script>
+    <meta http-equiv="Refresh" content="0; url='https://nickmous.com/index.php'" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
